--- a/mm/sass/blocks/platform.scss
+++ b/mm/sass/blocks/platform.scss
@@ -1,5 +1,5 @@
 .platform {
-  background: #646464 url('../img/t-bg.png') no-repeat top;
+  background: #646464 url('../img/t-bg-2.png') no-repeat top;
   background-size: cover;
 }
 
