--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -45,8 +45,8 @@
           <li><a class="sub-link" href="#">Tools</a></li>
       </ul>
       <div class="title  title--about">
-        <h1>Trade with Multiply Market</h1>
-        <p>Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
+        <h1>Trade with MultiplyMarket</h1>
+        <p class="title__sub">Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities.<br>We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
         <a href="register.html" class="button  button--title">Open account</a>
       </div>
     </div>
