--- a/mm/templates/register.html
+++ b/mm/templates/register.html
@@ -45,10 +45,10 @@
           <li><a class="sub-link" href="#">Tools</a></li>
       </ul>
       <h1>Open live account</h1>
-      <p class="register__text">Personal details</p>
       <div class="register__flex">
         <div class="register__left">
           <form class="form" method="post">
+            <p class="register__text">Fill up Your personal details:</p>
             <div class="form__flex">
               <input type="text" placeholder="First name">
               <input type="text" placeholder="Last name">
