--- a/mm/templates/separated.html
+++ b/mm/templates/separated.html
@@ -46,7 +46,7 @@
       </ul>
       <div class="separated__content">
         <h1>Segregated Accounts</h1>
-        <p>The unique MultiplyMarket a Loyalty Saver Account allows their users to conduct trades perfectly safe and keeps them out of slow transaction loadings or information and payments errors. </p>
+        <p class="title__sub">The unique MultiplyMarket a Loyalty Saver Account allows their users to conduct trades perfectly safe and keeps them out of slow transaction loadings or information and payments errors. </p>
         <div class="separated__adv">
           <b>Advantages:</b>
           <p>There are few more additional benefits that are shaped exactly to satisfy customers common needs. With all that major pluses, you can be sure in: </p>
