--- a/mm/templates/web.html
+++ b/mm/templates/web.html
@@ -26,9 +26,9 @@
     <div class="container">
       <ul class="sub-nav">
           <li>
-            <a class="sub-link">Accounts</a>
+            <a class="sub-link" href="about-us.html">Accounts</a>
             <ul class="sub-nav__accounts">
-                <li><a>Trade with<br>MultiplyMarket</a></li>
+                <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
                 <li><a href="separated.html">Segregated account</a></li>
                 <li><a href="register.html">Open live account</a></li>
@@ -45,12 +45,8 @@
           <li><a class="sub-link" href="#">Tools</a></li>
       </ul>
       <div class="trader__content">
-        <h1>Multiply Market Web Trader</h1>
+        <h1>MultiplyMarket Web Trader</h1>
         <div class="trader__flex">
-          <div class="trader__left">
-            <img src="../img/mobile.png" alt=""><br>
-            <a class="button  button--title" href="#">Go to web trader</a>
-          </div>
           <div class="trader__right">
             <p>Multiply Market`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the Multiply Market Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
             <p>Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the Multiply Market Online Trader.</p>
@@ -65,6 +61,10 @@
               <li>Make informed trading decisions based on technical stats.</li>
               <li>Have access from any internet connectible device.</li>
             </ul>
+            <a class="button  button--title" href="#">Go to web trader</a>
+          </div>
+          <div class="trader__left">
+            <img src="../img/mobile.png" alt=""><br>
           </div>
         </div>
         <div class="trader__sub-content">
