--- a/mm/sass/blocks/title.scss
+++ b/mm/sass/blocks/title.scss
@@ -15,69 +15,46 @@
     font-style: italic;
     font-weight: 100;
     font-family: 'SF UI Text Regular', sans-serif;
+    opacity: 0.6;
   }
 }
 
 .title--about {
   
   & h1 {
+    margin: 0;
     font-size: 50px;
-    // text-transform: none;
-  }
-  
-  & p {
-    font-size: 18px;
-    text-transform: none;
-    opacity: 0.6;
-    font-family: 'SF UI Text', sans-serif;
-  }
-  
-  & small {
-    display: block;
-    width: 400px;
-    margin-top: 30px;
-    font-size: 12px;
-    font-family: 'SF UI Text', sans-serif;
-    text-align: center;
-    text-transform: none;
-    opacity: 0.6;
   }
 }
 
 .title--account {
-  // display: flex;
-  align-items: center;
-  margin-top: 0;
+  margin: 0;
   padding-top: 40px;
   padding-bottom: 20px;
   
   & h1 {
     margin: 0;
     font-size: 50px;
-    // text-transform: none;
   }
   
   & p {
     width: 500px;
-    margin: 0;
-    font-size: 13px;
-    text-transform: none;
-    opacity: 0.6;
-    font-family: 'SF UI Text', sans-serif;
+    margin-bottom: 0;
   }
 }
 
 .title--platform {
   
   & h1 {
+    margin-bottom: 0;
     font-size: 50px;
-    // text-transform: none;
   }
-  
-  & p {
-    font-size: 20px;
-    font-family: 'SF UI Display Regular', sans-serif;
-    text-transform: none;
-    opacity: 0.7;
-  }
+}
+
+.title__sub {
+  margin-top: 20px;
+  font-size: 18px !important;
+  font-style: italic;
+  font-family: 'SF UI Text Regular', sans-serif;
+  opacity: 0.7;
 }
