--- a/mm/sass/blocks/trader.scss
+++ b/mm/sass/blocks/trader.scss
@@ -1,5 +1,5 @@
 .trader {
-  background: #646464 url('../img/t-bg.png') no-repeat top;
+  background: #646464 url('../img/a-bg.png') no-repeat top;
   background-size: cover;
 }
 
