--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -46,7 +46,7 @@
       </ul>
       <div class="title  title--account">
         <h1>Account types</h1>
-        <p>Our accounts provide benefits of Forex market to private and corporate clients, using one of the most advanced trading platform available.</p>
+        <p class="title__sub">Our accounts provide benefits of Forex market to private and corporate clients, using one of the most advanced trading platform available.</p>
       </div>
       <table class="table">
         <tr>
