--- a/mm/templates/platform.html
+++ b/mm/templates/platform.html
@@ -46,7 +46,7 @@
       </ul>
       <div class="title  title--platform">
         <h1>Multiply Market Trade Meta Trader 4</h1>
-        <p>The Multiply Market Meta Trader Four provides the optimal platform for making the most out of Forex trading</p>
+        <p class="title__sub">The Multiply Market Meta Trader Four provides the optimal platform for making the most out of Forex trading</p>
       </div>
       <p class="platform__text">MT4 is a globally acclaimed software made specifically for the purpose of delivering the best Forex experience, along with Commodities, Futures and different tradeable assets. It is perfect for new traders, as well as seasoned veterans, because it covers all aspects of the trading process. Due to its reliability, easiness of use, timely access to vital information and trading strategies, along with the latest economic data and occurrences, MT4 is considered to be the leading platform worldwideе</p>
       <div class="platform__flex">
