--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -574,6 +574,13 @@ body {
   margin-bottom: 0;
   font-size: 50px; }
 
+.title--spread h1 {
+  margin: 0;
+  font-size: 50px; }
+
+.title--spread p {
+  margin-bottom: 40px; }
+
 .title__sub {
   margin-top: 20px;
   font-size: 18px !important;
@@ -647,6 +654,17 @@ body {
 
 .table__check-r {
   background: url("../img/check-r.png") no-repeat center; }
+
+.table--spread {
+  margin: 30px 0;
+  font-weight: 100;
+  border: 1px solid #fff;
+  border-collapse: collapse;
+  text-align: center; }
+  .table--spread tr {
+    border: 1px solid #eeba1d; }
+  .table--spread th {
+    padding: 5px; }
 
 .about {
   height: 100vh;
@@ -933,3 +951,20 @@ body {
     font-size: 18px;
     list-style-image: url("../img/r-arrow-s.png");
     opacity: 0.8; }
+
+.spread {
+  padding-bottom: 70px;
+  background: #646464 url("../img/t-bg-2.png") no-repeat top;
+  background-size: cover; }
+
+.spread__content {
+  color: #fff;
+  font-family: 'SF UI Display Regular', sans-serif; }
+  .spread__content b {
+    font-size: 30px;
+    text-transform: uppercase; }
+  .spread__content p {
+    font-size: 20px; }
+  .spread__content ul {
+    font-size: 18px;
+    list-style-image: url("../img/r-arrow-s.png"); }
