--- a/mm/sass/blocks/title.scss
+++ b/mm/sass/blocks/title.scss
@@ -51,6 +51,18 @@
   }
 }
 
+.title--spread {
+  
+  & h1 {
+    margin: 0;
+    font-size: 50px;
+  }
+  
+  & p {
+    margin-bottom: 40px;
+  }
+}
+
 .title__sub {
   margin-top: 20px;
   font-size: 18px !important;
