--- a/forex-lp/css/style.css
+++ b/forex-lp/css/style.css
@@ -329,13 +329,16 @@ body {
     font-family: 'SF UI Display Regular', sans-serif; }
 
 .edge__box--over {
-  background: url("../img/edge-f.png") no-repeat top left; }
+  background: url("../img/coins.svg") no-repeat top left;
+  background-size: 70px; }
 
 .edge__box--free {
-  background: url("../img/edge-s.png") no-repeat top left; }
+  background: url("../img/present.svg") no-repeat top left;
+  background-size: 60px; }
 
 .edge__box--award {
-  background: url("../img/edge-t.png") no-repeat top left; }
+  background: url("../img/award.svg") no-repeat top left;
+  background-size: 70px; }
 
 @media screen and (max-width: 1200px) {
   .edge__flex {
@@ -347,11 +350,14 @@ body {
     .edge__box p {
       font-size: 14px; }
   .edge__box--over {
-    background: url("../img/edge-f.png") no-repeat top; }
+    background: url("../img/coins.svg") no-repeat top;
+    background-size: 70px; }
   .edge__box--free {
-    background: url("../img/edge-s.png") no-repeat top; }
+    background: url("../img/present.svg") no-repeat top;
+    background-size: 60px; }
   .edge__box--award {
-    background: url("../img/edge-t.png") no-repeat top; } }
+    background: url("../img/award.svg") no-repeat top;
+    background-size: 70px; } }
 
 @media screen and (max-width: 768px) {
   .edge__flex {
