--- a/mm/templates/platform.html
+++ b/mm/templates/platform.html
@@ -42,7 +42,16 @@
                 <li><a href="mobile.html">MultiplyMarket Trade Mobile</a></li>
             </ul>
           </li>
-          <li><a class="sub-link" href="#">Tools</a></li>
+          <li>
+            <a class="sub-link" href="templates/spread.html">Tools</a>
+            <ul class="sub-nav__accounts">
+                <li><a href="templates/spread.html">Spreads and trading hours</a></li>
+                <li><a href="templates/web.html">Trade glossary</a></li>
+                <li><a href="templates/mobile.html">Forex Signals</a></li>
+                <li><a href="templates/mobile.html">Account faq</a></li>
+                <li><a href="templates/mobile.html">Account funding & Withdrawal</a></li>
+            </ul>
+          </li>
       </ul>
       <div class="title  title--platform">
         <h1>Multiply Market Trade Meta Trader 4</h1>
