--- a/trade-lp/css/style.css
+++ b/trade-lp/css/style.css
@@ -343,16 +343,16 @@ body {
   background-size: 70px; }
 
 .edge__box--overs {
-  background: url("../img/qua.svg") no-repeat top left;
-  background-size: 70px; }
+  background: url("../img/present.svg") no-repeat top left;
+  background-size: 60px; }
 
 .edge__box--frees {
   background: url("../img/fast.svg") no-repeat top left;
   background-size: 70px; }
 
 .edge__box--awards {
-  background: url("../img/set.svg") no-repeat top left;
-  background-size: 70px; }
+  background: url("../img/qua.svg") no-repeat top left;
+  background-size: 60px; }
 
 @media screen and (max-width: 1200px) {
   .edge__flex {
