--- a/trade-lp/sass/blocks/edge.scss
+++ b/trade-lp/sass/blocks/edge.scss
@@ -45,8 +45,8 @@
 }
 
 .edge__box--overs {
-  background: url('../img/qua.svg') no-repeat top left;
-  background-size: 70px;
+  background: url('../img/present.svg') no-repeat top left;
+  background-size: 60px;
 }
 
 .edge__box--frees {
@@ -55,8 +55,8 @@
 }
 
 .edge__box--awards {
-  background: url('../img/set.svg') no-repeat top left;
-  background-size: 70px;
+  background: url('../img/qua.svg') no-repeat top left;
+  background-size: 60px;
 }
 
 @media screen and ($tablet-widths) {
