--- a/mm/templates/mobile.html
+++ b/mm/templates/mobile.html
@@ -43,12 +43,12 @@
             </ul>
           </li>
           <li>
-            <a class="sub-link" href="templates/spread.html">Tools</a>
+            <a class="sub-link" href="spread.html">Tools</a>
             <ul class="sub-nav__accounts">
-                <li><a href="templates/spread.html">Spreads and trading hours</a></li>
+                <li><a href="spread.html">Spreads and trading hours</a></li>
                 <li><a href="templates/web.html">Trade glossary</a></li>
                 <li><a href="templates/mobile.html">Forex Signals</a></li>
-                <li><a href="templates/mobile.html">Account faq</a></li>
+                <li><a href="faq.html">Account faq</a></li>
                 <li><a href="templates/mobile.html">Account funding & Withdrawal</a></li>
             </ul>
           </li>
