--- a/mm/templates/account-faq.html
+++ b/mm/templates/account-faq.html
@@ -49,14 +49,14 @@
                 <li><a href="templates/web.html">Trade glossary</a></li>
                 <li><a href="templates/mobile.html">Forex Signals</a></li>
                 <li><a>Account faq</a></li>
-                <li><a href="templates/mobile.html">Account funding & Withdrawal</a></li>
+                <li><a href="account-funding.html">Account funding & Withdrawal</a></li>
             </ul>
           </li>
       </ul>
       <div class="title  title--about">
         <h1>Account FAQ</h1>
       </div>
-      <div class="faq__content">
+      <div class="content">
         <b>How to open a Multiply Market trade account?</b>
         <p>It is easy and secure to open a Multiply Market account. Initially, you can choose to open a practice, free demo account. However, if you’re ready to trade, you can make a deposit and open a Live Account. Based on how you would like to fund your account, there are three types of account available, but once you begin trading, there is the option to move from one account type to another.</p>
         <p>You will need to fill out a short registration form for any Live Account that you want to open. Legal documentation is required by regulation in order to provide proof of your identity. As soon as your identity has been confirmed, all you need to do is download the platform you want to trade on, make a deposit to fund your account, and then you’re ready to start trading.</p>
