--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -973,14 +973,14 @@ body {
   background: #646464 url("../img/t-bg-2.png") no-repeat top;
   background-size: cover; }
 
-.faq__content {
+.content {
   margin-top: 40px;
   padding-bottom: 70px;
   color: #fff; }
-  .faq__content b {
+  .content b {
     font-size: 30px;
     font-family: 'SF UI Display Black', sans-serif; }
-  .faq__content p {
+  .content p {
     font-size: 20px;
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7; }
