--- a/mm/templates/web.html
+++ b/mm/templates/web.html
@@ -48,8 +48,8 @@
                 <li><a href="spread.html">Spreads and trading hours</a></li>
                 <li><a href="templates/web.html">Trade glossary</a></li>
                 <li><a href="templates/mobile.html">Forex Signals</a></li>
-                <li><a href="faq.html">Account faq</a></li>
-                <li><a href="templates/mobile.html">Account funding & Withdrawal</a></li>
+                <li><a href="account-faq.html">Account faq</a></li>
+                <li><a href="account-funding.html">Account funding & Withdrawal</a></li>
             </ul>
           </li>
       </ul>
