--- a/mm/templates/account-faq.html
+++ b/mm/templates/account-faq.html
@@ -47,7 +47,7 @@
             <ul class="sub-nav__accounts">
                 <li><a href="spread.html">Spreads and trading hours</a></li>
                 <li><a href="glossary">Trade glossary</a></li>
-                <li><a href="templates/mobile.html">Forex Signals</a></li>
+                <li><a href="signals.html">Forex Signals</a></li>
                 <li><a>Account faq</a></li>
                 <li><a href="account-funding.html">Account funding & Withdrawal</a></li>
             </ul>
