--- a/mm/templates/glossary.html
+++ b/mm/templates/glossary.html
@@ -46,8 +46,8 @@
             <a class="sub-link" href="spread.html">Tools</a>
             <ul class="sub-nav__accounts">
                 <li><a href="spread.html">Spreads and trading hours</a></li>
-                <li><a href="glossary.html">Trade glossary</a></li>
-                <li><a href="templates/mobile.html">Forex Signals</a></li>
+                <li><a>Trade glossary</a></li>
+                <li><a href="signals.html">Forex Signals</a></li>
                 <li><a href="account-faq.html">Account faq</a></li>
                 <li><a href="account-funding.html">Account funding & Withdrawal</a></li>
             </ul>
