--- a/trade-lp/css/style.css
+++ b/trade-lp/css/style.css
@@ -399,7 +399,8 @@ body {
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between; }
+  justify-content: space-between;
+  padding-top: 70px; }
 
 .start__box {
   position: relative;
@@ -413,11 +414,29 @@ body {
 .start__box--one:before {
   content: '';
   position: absolute;
-  top: -50px;
+  top: -60px;
   left: 0;
   width: 100%;
-  height: 107px;
-  background: url("../img/step1.png") no-repeat top; }
+  height: 120px;
+  background: url("../img/step-1.svg") no-repeat top; }
+
+.start__box--two:before {
+  content: '';
+  position: absolute;
+  top: -60px;
+  left: 0;
+  width: 100%;
+  height: 120px;
+  background: url("../img/step-2.svg") no-repeat top; }
+
+.start__box--three:before {
+  content: '';
+  position: absolute;
+  top: -60px;
+  left: 0;
+  width: 100%;
+  height: 120px;
+  background: url("../img/step-3.svg") no-repeat top; }
 
 .promo {
   padding: 25px 0;
