--- a/mm/templates/signals.html
+++ b/mm/templates/signals.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="faq">
-    <header class="header  header--temp">
+  <section class="signals">
+    <header class="header">
       <div class="container">
         <nav class="main-nav">
           <a href="../index.html">
@@ -46,7 +46,7 @@
             <a class="sub-link" href="spread.html">Tools</a>
             <ul class="sub-nav__accounts">
                 <li><a href="spread.html">Spreads and trading hours</a></li>
-                <li><a href="glossary">Trade glossary</a></li>
+                <li><a href="glossary.html">Trade glossary</a></li>
                 <li><a>Forex Signals</a></li>
                 <li><a href="account-faq.html">Account faq</a></li>
                 <li><a href="account-funding.html">Account funding & Withdrawal</a></li>
@@ -55,7 +55,7 @@
       </ul>
       <div class="title  title--about">
         <h1>Forex Signals</h1>
-        <p class="title__sub">At MultiplyMarket we provide the best forex signals by working closely with technology providers who are at the forefront of the industry.To get a different perspective on Commodities, Indices, Currency Pairs, and Stocks, you can change the Time Frame.</p>
+        <p class="title__sub">At MultiplyMarket we provide the best forex signals by working closely with technology providers who are at the forefront of the industry.<br>To get a different perspective on Commodities, Indices, Currency Pairs, and Stocks, you can change the Time Frame.</p>
       </div>
       <div class="content">
         <a class="button  button--title" href=http://www.mlc-forex-news.com"">HOT Signals</a>
