--- a/trade-lp/css/style.css
+++ b/trade-lp/css/style.css
@@ -364,11 +364,23 @@ body {
     .edge__box p {
       font-size: 14px; }
   .edge__box--over {
-    background: url("../img/edge-f.png") no-repeat top; }
+    background: url("../img/coins.svg") no-repeat top;
+    background-size: 70px; }
   .edge__box--free {
-    background: url("../img/edge-s.png") no-repeat top; }
+    background: url("../img/spread.svg") no-repeat top;
+    background-size: 70px; }
   .edge__box--award {
-    background: url("../img/edge-t.png") no-repeat top; } }
+    background: url("../img/education.svg") no-repeat top;
+    background-size: 70px; }
+  .edge__box--overs {
+    background: url("../img/present.svg") no-repeat top;
+    background-size: 60px; }
+  .edge__box--frees {
+    background: url("../img/fast.svg") no-repeat top;
+    background-size: 70px; }
+  .edge__box--awards {
+    background: url("../img/qua.svg") no-repeat top;
+    background-size: 60px; } }
 
 @media screen and (max-width: 768px) {
   .edge__flex {
