--- a/trade-lp/sass/blocks/edge.scss
+++ b/trade-lp/sass/blocks/edge.scss
@@ -74,15 +74,33 @@
   }
   
   .edge__box--over {
-    background: url('../img/edge-f.png') no-repeat top;
+    background: url('../img/coins.svg') no-repeat top;
+    background-size: 70px;
   }
   
   .edge__box--free {
-    background: url('../img/edge-s.png') no-repeat top;
+    background: url('../img/spread.svg') no-repeat top;
+    background-size: 70px;
   }
   
   .edge__box--award {
-    background: url('../img/edge-t.png') no-repeat top;
+    background: url('../img/education.svg') no-repeat top;
+    background-size: 70px;
+  }
+  
+  .edge__box--overs {
+    background: url('../img/present.svg') no-repeat top;
+    background-size: 60px;
+  }
+  
+  .edge__box--frees {
+    background: url('../img/fast.svg') no-repeat top;
+    background-size: 70px;
+  }
+  
+  .edge__box--awards {
+    background: url('../img/qua.svg') no-repeat top;
+    background-size: 60px;
   }
 }
 
