--- a/forex/sass/blocks/online.scss
+++ b/forex/sass/blocks/online.scss
@@ -56,10 +56,14 @@
 }
 
 .online__box--zulu {
-  background: url('../img/online-1.png') no-repeat top;
+  background: url('../img/trades.svg') no-repeat top,
+              url('../img/zulu.svg') no-repeat center;
+  background-size: 120px, 200px;
   
   &:hover {
-    background: url('../img/online-1-h.png') no-repeat top;
+    background: url('../img/trades-h.svg') no-repeat top,
+                url('../img/zulu-h.svg') no-repeat center;
+    background-size: 120px, 200px;
   }
   
   & a:hover {
@@ -69,10 +73,14 @@
 }
 
 .online__box--tradency {
-  background: url('../img/online-2.png') no-repeat top;
+  background: url('../img/lamp.svg') no-repeat top,
+              url('../img/tradency.svg') no-repeat center;
+  background-size: 110px, 300px;
   
   &:hover {
-    background: url('../img/online-2-h.png') no-repeat top;
+    background: url('../img/lamp-h.svg') no-repeat top,
+                url('../img/tradency-h.svg') no-repeat center;
+    background-size: 110px, 300px;
   }
   
   & a:hover {
@@ -82,7 +90,8 @@
 }
 
 .online__box--algo {
-  background: url('../img/online-3.png') no-repeat top;
+  background: url('../img/algo.svg') no-repeat top;
+  background-size: 120px;
 }
 
 .online__slider {
