--- a/trade-lp/css/style.css
+++ b/trade-lp/css/style.css
@@ -420,6 +420,7 @@ body {
   padding: 10px;
   padding-top: 80px;
   color: #fff;
+  font-family: 'SF UI Display', sans-serif;
   text-align: center;
   background: gray; }
 
