--- a/trade-lp/sass/blocks/start.scss
+++ b/trade-lp/sass/blocks/start.scss
@@ -22,6 +22,7 @@
   padding: 10px;
   padding-top: 80px;
   color: #fff;
+  font-family: 'SF UI Display', sans-serif;
   text-align: center;
   background: gray;
   
