--- a/mm/sass/style.scss
+++ b/mm/sass/style.scss
@@ -23,7 +23,7 @@
 @import 'blocks/platform';
 @import 'blocks/register';
 @import 'blocks/form';
-@import 'blocks/separated';
+@import 'blocks/segregated';
 @import 'blocks/trader';
 @import 'blocks/spread';
 @import 'blocks/faq';
