--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -868,7 +868,8 @@ body {
     display: block;
     width: 200px;
     margin: auto;
-    margin-top: 50px; }
+    margin-top: 50px;
+    text-align: center; }
 
 .separated__text {
   margin-bottom: 60px;
