--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -30,7 +30,7 @@
             <ul class="sub-nav__accounts">
                 <li><a>Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
-                <li><a href="separated.html">Segregated account</a></li>
+                <li><a href="segregated.html">Segregated account</a></li>
                 <li><a href="register.html">Open live account</a></li>
             </ul>
           </li>
