--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -30,7 +30,7 @@
             <ul class="sub-nav__accounts">
                 <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
                 <li><a>Account types</a></li>
-                <li><a href="separated.html">Segregated account</a></li>
+                <li><a href="segregated.html">Segregated account</a></li>
                 <li><a href="register.html">Open live account</a></li>
             </ul>
           </li>
