--- a/mm/templates/glossary.html
+++ b/mm/templates/glossary.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Glossary - MultiplyMarket</title>
+  <title>Trade Glossary - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
             <ul class="sub-nav__accounts">
                 <li><a>Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
-                <li><a href="separated.html">Segregated account</a></li>
+                <li><a href="segregated.html">Segregated account</a></li>
                 <li><a href="register.html">Open live account</a></li>
             </ul>
           </li>
