--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -990,3 +990,43 @@ body {
   height: 100vh;
   background: #646464 url("../img/t-bg-1.png") no-repeat top;
   background-size: cover; }
+
+.start {
+  padding: 50px 0 70px 0; }
+  .start h1 {
+    margin-top: 0; }
+  .start h2 {
+    margin-top: 70px;
+    margin-bottom: 0; }
+  .start h1, .start h2 {
+    font-size: 40px;
+    font-family: 'SF UI Display Black', sans-serif;
+    text-align: center;
+    text-transform: uppercase; }
+  .start p {
+    font-family: 'SF UI Display Regular', sans-serif;
+    opacity: 0.7; }
+  .start .button {
+    display: block;
+    width: 150px;
+    margin: auto;
+    margin-top: 30px;
+    text-align: center; }
+
+.start__sub {
+  margin-top: 0;
+  text-align: center; }
+
+.start__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-top: 50px; }
+
+.start__box {
+  width: 250px;
+  font-family: 'SF UI Display Regular', sans-serif;
+  text-align: center; }
