--- a/mm/sass/style.scss
+++ b/mm/sass/style.scss
@@ -13,6 +13,8 @@
 @import 'blocks/edge';
 @import 'blocks/live';
 @import 'blocks/map';
+@import 'blocks/start';
+@import 'blocks/footer';
 
 @import 'blocks/title';
 @import 'blocks/give';
@@ -29,4 +31,3 @@
 @import 'blocks/faq';
 @import 'blocks/content';
 @import 'blocks/signals';
-@import 'blocks/start';
