--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -539,6 +539,86 @@ body {
 .map iframe {
   width: 100%; }
 
+.start {
+  padding: 50px 0 70px 0; }
+  .start h1 {
+    margin-top: 0; }
+  .start h2 {
+    margin-top: 70px;
+    margin-bottom: 0; }
+  .start h1, .start h2 {
+    font-size: 40px;
+    font-family: 'SF UI Display Black', sans-serif;
+    text-align: center;
+    text-transform: uppercase; }
+  .start p {
+    font-family: 'SF UI Display Regular', sans-serif;
+    opacity: 0.7; }
+  .start .button {
+    display: block;
+    width: 150px;
+    margin: auto;
+    margin-top: 30px;
+    text-align: center; }
+
+.start__sub {
+  margin-top: 0;
+  text-align: center; }
+
+.start__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-top: 50px; }
+
+.start__box {
+  width: 250px;
+  font-family: 'SF UI Display Regular', sans-serif;
+  text-align: center; }
+
+.footer {
+  padding: 50px 0 10px 0;
+  background: #212121; }
+  .footer b {
+    display: block;
+    margin-bottom: 10px;
+    color: #fff;
+    font-family: 'SF UI Display Heavy', sans-serif; }
+  .footer ul {
+    font-family: 'SF UI Display Light', sans-serif;
+    list-style-image: url("../img/r-arrow-s.png");
+    list-style-position: inside; }
+    .footer ul a {
+      color: #818181;
+      text-decoration: none;
+      -webkit-transition: 0.2s;
+      transition: 0.2s; }
+      .footer ul a:hover {
+        color: #eeba1d; }
+  .footer h1 {
+    color: #fff;
+    font-size: 25px;
+    font-family: 'SF UI Display Heavy', sans-serif;
+    text-align: center;
+    text-transform: uppercase; }
+  .footer p {
+    color: #818181;
+    font-family: 'SF UI Display Regular', sans-serif;
+    text-align: center; }
+  .footer hr {
+    opacity: 0.2; }
+
+.footer__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
 .title {
   margin-top: 120px;
   color: #fff; }
@@ -990,43 +1070,3 @@ body {
   height: 100vh;
   background: #646464 url("../img/t-bg-1.png") no-repeat top;
   background-size: cover; }
-
-.start {
-  padding: 50px 0 70px 0; }
-  .start h1 {
-    margin-top: 0; }
-  .start h2 {
-    margin-top: 70px;
-    margin-bottom: 0; }
-  .start h1, .start h2 {
-    font-size: 40px;
-    font-family: 'SF UI Display Black', sans-serif;
-    text-align: center;
-    text-transform: uppercase; }
-  .start p {
-    font-family: 'SF UI Display Regular', sans-serif;
-    opacity: 0.7; }
-  .start .button {
-    display: block;
-    width: 150px;
-    margin: auto;
-    margin-top: 30px;
-    text-align: center; }
-
-.start__sub {
-  margin-top: 0;
-  text-align: center; }
-
-.start__flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding-top: 50px; }
-
-.start__box {
-  width: 250px;
-  font-family: 'SF UI Display Regular', sans-serif;
-  text-align: center; }
