--- a/mm/sass/blocks/faq.scss
+++ b/mm/sass/blocks/faq.scss
@@ -1,4 +1,4 @@
 .faq {
-  background: #646464 url('../img/t-bg-2.png') no-repeat top;
+  background: #646464 url('../img/a-bg.png') no-repeat top;
   background-size: cover;
 }
