--- a/mm/sass/blocks/spread.scss
+++ b/mm/sass/blocks/spread.scss
@@ -1,7 +1,6 @@
 .spread {
   padding-bottom: 70px;
-  background: #646464 url('../img/t-bg-2.png') no-repeat top;
-  background-size: cover;
+  background: #646464;
 }
 
 .spread__content {
