--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -1035,8 +1035,7 @@ body {
 
 .spread {
   padding-bottom: 70px;
-  background: #646464 url("../img/t-bg-2.png") no-repeat top;
-  background-size: cover; }
+  background: #646464; }
 
 .spread__content {
   color: #fff;
@@ -1051,7 +1050,7 @@ body {
     list-style-image: url("../img/r-arrow-s.png"); }
 
 .faq {
-  background: #646464 url("../img/t-bg-2.png") no-repeat top;
+  background: #646464 url("../img/a-bg.png") no-repeat top;
   background-size: cover; }
 
 .content {
@@ -1065,8 +1064,16 @@ body {
     font-size: 20px;
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7; }
+  .content ul {
+    font-size: 18px;
+    font-family: 'SF UI Display Regular', sans-serif;
+    list-style-image: url("../img/r-arrow-s.png");
+    opacity: 0.7; }
 
 .signals {
   height: 100vh;
   background: #646464 url("../img/t-bg-1.png") no-repeat top;
   background-size: cover; }
+
+.glossary {
+  background: gray; }
