--- a/mm/sass/blocks/content.scss
+++ b/mm/sass/blocks/content.scss
@@ -13,4 +13,11 @@
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
   }
+  
+  & ul {
+    font-size: 18px;
+    font-family: 'SF UI Display Regular', sans-serif;
+    list-style-image: url('../img/r-arrow-s.png');
+    opacity: 0.7;
+  }
 }
