--- a/mm/templates/glossary.html
+++ b/mm/templates/glossary.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="faq">
+  <section class="glossary">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
