--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -144,7 +144,7 @@ body {
 
 .video iframe {
   position: relative;
-  top: -54px;
+  top: -53px;
   width: 100%;
   height: 34px;
   padding-top: 15px;
@@ -155,19 +155,9 @@ body {
   top: 0;
   width: 1180px; }
 
-.header {
-  border-bottom: 2px solid #525252; }
-
 .header--temp {
-  border-bottom: 3px solid #525252;
+  border-bottom: 1px solid #525252;
   background: rgba(37, 37, 37, 0.7); }
-
-@media screen and (max-width: 768px) {
-  .header {
-    padding-top: 30px; }
-  .header--temp {
-    height: 180px;
-    padding-bottom: 30px; } }
 
 .main-nav {
   display: -webkit-box;
@@ -180,27 +170,6 @@ body {
   -ms-flex-align: center;
   align-items: center;
   height: 90px; }
-
-@media screen and (max-width: 768px) {
-  .main-nav {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column; }
-  .main-nav__user--temp {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    margin-top: 10px; }
-    .main-nav__user--temp a {
-      margin-bottom: 10px; } }
 
 .button {
   padding: 8px 23px;
@@ -267,13 +236,7 @@ body {
     border-radius: 50px;
     cursor: pointer; }
 
-@media screen and (max-width: 768px) {
-  .button--title {
-    padding: 8px 35px;
-    font-size: 20px; } }
-
 .sub-nav {
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -281,9 +244,9 @@ body {
   -ms-flex-pack: justify;
   justify-content: space-between;
   width: 250px;
+  margin: auto;
   padding-top: 20px;
   padding-left: 0;
-  margin: auto;
   list-style: none; }
   .sub-nav li {
     position: relative; }
@@ -296,20 +259,19 @@ body {
     text-transform: uppercase;
     font-family: 'SF UI Display Regular', sans-serif;
     background: url("../img/link-arrow.png") no-repeat bottom;
-    -webkit-transition: 0.1s;
-    transition: 0.1s;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
     cursor: pointer; }
 
-.sub-nav__accounts {
+.sub-nav__list {
   position: absolute;
-  top: 22px;
+  top: 32px;
   left: -40px;
-  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  margin-top: 10px;
+  display: none;
   padding-left: 0;
   text-align: center;
   list-style: none;
@@ -317,24 +279,24 @@ body {
   border-radius: 5px;
   background: rgba(0, 0, 0, 0.8);
   z-index: 2;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
-  .sub-nav__accounts a {
+  -webkit-transition: 0.2s;
+  transition: 0.2s; }
+  .sub-nav__list a {
     display: block;
     padding: 10px 20px;
     background: none;
     -webkit-transition: 0.2s;
     transition: 0.2s; }
-    .sub-nav__accounts a:hover {
+    .sub-nav__list a:hover {
       color: #000;
       background: #eeba1d; }
 
-.sub-nav > li:hover .sub-nav__accounts {
+.sub-nav > li:hover .sub-nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
 
-.sub-nav > li:hover .sub-link {
+.sub-nav > li:hover .sub__title {
   background: url("../img/link-arrow-up.png") no-repeat bottom; }
 
 .trading {
