--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -88,11 +88,11 @@
 }
 
 @media screen and ($mobile-widths) {
-  .button {
-    
-    &--title {
-      padding: 8px 35px;
-      font-size: 20px;
-    }
-  }
+  // .button {
+  // 
+  //   &--title {
+  //     padding: 8px 35px;
+  //     font-size: 20px;
+  //   }
+  // }
 }
