--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -1,14 +1,14 @@
 .video {
   
-  & video {
+  video {
     width: 100%;
     height: 100vh;
     object-fit: fill;
   }
   
-  & iframe {
+  iframe {
     position: relative;
-    top: -54px;
+    top: -53px;
     width: 100%;
     height: 34px;
     padding-top: 15px;
