--- a/mm/templates/signals.html
+++ b/mm/templates/signals.html
@@ -13,7 +13,7 @@
       <div class="container">
         <nav class="main-nav">
           <a href="../index.html">
-            <img src="../img/logo-w.svg" height="50" alt="MultiplyMarket">
+            <img src="../img/logo-w.svg" width="180" height="auto" alt="MultiplyMarket">
           </a>
           <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="register.html">Open live account</a>
@@ -27,7 +27,7 @@
       <ul class="sub-nav">
           <li>
             <a class="sub-link">Accounts</a>
-            <ul class="sub-nav__accounts">
+            <ul class="sub-nav__list">
                 <li><a>Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
                 <li><a href="segregated.html">Segregated account</a></li>
@@ -35,16 +35,16 @@
             </ul>
           </li>
           <li>
-            <a class="sub-link" href="platform.html">Platforms</a>
-            <ul class="sub-nav__accounts">
+            <a class="sub-link">Platforms</a>
+            <ul class="sub-nav__list">
                 <li><a href="platform.html">MultiplyMarket Trade Meta Trader 4</a></li>
                 <li><a href="web.html">MultiplyMarket Web Trader</a></li>
                 <li><a href="mobile.html">MultiplyMarket Trade Mobile</a></li>
             </ul>
           </li>
           <li>
-            <a class="sub-link" href="spread.html">Tools</a>
-            <ul class="sub-nav__accounts">
+            <a class="sub-link">Tools</a>
+            <ul class="sub-nav__list">
                 <li><a href="spread.html">Spreads and trading hours</a></li>
                 <li><a href="glossary.html">Trade glossary</a></li>
                 <li><a>Forex Signals</a></li>
